# https-github.com-noemifavilli-jumpMarco

./: .gitignore  .gitmodules  CMakeLists.txt  Physics.docx  README.md  marco.nsi  textures.txt
.github/workflows/: build-and-test.yml
jump_marco/: main.cpp
jump_marco/components/: cmp_actor_movement.cpp  cmp_animation.cpp  cmp_animation.h  cmp_enemy_ai.cpp  cmp_enemy_turret.cpp  cmp_hurt_player.cpp  cmp_hurt_player.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_sprite.cpp  cmp_text.cpp  cmp_text.h
jump_marco/entities/: player_factory.cpp  player_factory.h
jump_marco/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp  scene_menu.h
lib/ecm/: CMakeLists.txt  ecm.cpp
lib/ecm/include/: ecm.h
lib/engine/: CMakeLists.txt  engine.cpp  engine.h
lib/maths/: CMakeLists.txt  maths.h
lib/tile_level_loader/: CMakeLists.txt  tile_level_loader.cpp
res/: level_1.txt
test/: main_test.cpp
test/entities/: test_player_factory.cpp
